tried pagination with hooks and minor fixex after the scrollbar setup

--- a/src/components/personal/personal.css
+++ b/src/components/personal/personal.css
@@ -238,6 +238,10 @@
     }
 }
 
+.a_head{
+    transform: scale(0.6);
+}
+
 
    
    
